--- a/srv/statusPagamento/package.json
+++ b/srv/statusPagamento/package.json
@@ -2,6 +2,7 @@
     "name": "tech-challenge-status-pagamento",
     "version": "1.0.0",
     "dependencies": {
-        "aws-lambda": "^1.0.7"
+        "aws-lambda": "^1.0.7",
+        "axios": "^1.6.7"
     }
 }
